--- a/brownie/data/default-config.yaml
+++ b/brownie/data/default-config.yaml
@@ -71,4 +71,4 @@ hypothesis:
 autofetch_sources: false
 dependencies: null
 dev_deployment_artifacts: false
-eager_caching: false
+eager_caching: true
