--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,176 +4,186 @@
 #
 #    pip-compile requirements-dev.in
 #
-alabaster==0.7.16
+alabaster==1.0.0
     # via sphinx
-attrs==23.2.0
+attrs==25.3.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
-babel==2.14.0
+babel==2.17.0
     # via sphinx
-black==24.2.0
+backports-tarfile==1.2.0
+    # via jaraco-context
+black==25.1.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   -r requirements-dev.in
-build==1.0.3
+build==1.2.2.post1
     # via pip-tools
 bump2version==1.0.1
     # via bumpversion
 bumpversion==0.6.0
     # via -r requirements-dev.in
-cachetools==5.3.2
+cachetools==5.5.2
     # via tox
-certifi==2024.2.2
+certifi==2025.1.31
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests
-cffi==1.16.0
+cffi==1.17.1
     # via cryptography
 chardet==5.2.0
     # via tox
-charset-normalizer==3.3.2
+charset-normalizer==3.4.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests
-click==8.1.7
+click==8.1.8
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
     #   pip-tools
 colorama==0.4.6
     # via tox
-coverage[toml]==7.4.3
+coverage[toml]==7.8.0
     # via
     #   -r requirements-dev.in
     #   pytest-cov
-cryptography==44.0.1
+cryptography==44.0.2
     # via secretstorage
-distlib==0.3.8
+distlib==0.3.9
     # via virtualenv
-docutils==0.20.1
+docutils==0.21.2
     # via
     #   readme-renderer
     #   sphinx
     #   sphinx-rtd-theme
-filelock==3.13.1
+eth-retry==0.2.2
+    # via -r requirements-dev.in
+filelock==3.18.0
     # via
     #   tox
     #   virtualenv
-flake8==7.0.0
+flake8==7.2.0
     # via -r requirements-dev.in
-idna==3.6
+idna==3.10
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests
 imagesize==1.4.1
     # via sphinx
-importlib-metadata==7.0.1
+importlib-metadata==8.6.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   keyring
-    #   twine
-iniconfig==2.0.0
+iniconfig==2.1.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
-isort==5.13.2
+isort==6.0.1
     # via -r requirements-dev.in
-jaraco-classes==3.3.1
+jaraco-classes==3.4.0
     # via keyring
-jeepney==0.8.0
+jaraco-context==6.0.1
+    # via keyring
+jaraco-functools==4.1.0
+    # via keyring
+jeepney==0.9.0
     # via
     #   keyring
     #   secretstorage
 jinja2==3.1.6
     # via sphinx
-keyring==24.3.0
+keyring==25.6.0
     # via twine
 markdown-it-py==3.0.0
     # via rich
-markupsafe==2.1.5
+markupsafe==3.0.2
     # via jinja2
 mccabe==0.7.0
     # via flake8
 mdurl==0.1.2
     # via markdown-it-py
-more-itertools==10.2.0
-    # via jaraco-classes
-mypy-extensions==1.0.0
+more-itertools==10.7.0
     # via
-    #   -c requirements.txt
+    #   jaraco-classes
+    #   jaraco-functools
+mypy-extensions==1.1.0
+    # via
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
-nh3==0.2.15
+nh3==0.2.21
     # via readme-renderer
 packaging==23.2
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
     #   build
     #   pyproject-api
     #   pytest
     #   sphinx
     #   tox
+    #   twine
 pathspec==0.12.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
-pip-tools==7.4.0
+pip-tools==7.4.1
     # via -r requirements-dev.in
-pkginfo==1.9.6
+pkginfo==1.12.1.2
     # via twine
-platformdirs==4.2.0
+platformdirs==4.3.7
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
     #   tox
     #   virtualenv
-pluggy==1.4.0
+pluggy==1.5.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
     #   tox
 py==1.11.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
-pycodestyle==2.11.1
+pycodestyle==2.13.0
     # via flake8
-pycparser==2.21
+pycparser==2.22
     # via cffi
-pyflakes==3.2.0
+pyflakes==3.3.2
     # via flake8
-pygments==2.17.2
+pygments==2.19.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pygments-lexer-solidity
     #   readme-renderer
     #   rich
     #   sphinx
 pygments-lexer-solidity==0.7.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   -r requirements-dev.in
 pyproject-api==1.6.1
     # via tox
-pyproject-hooks==1.0.0
+pyproject-hooks==1.2.0
     # via
     #   build
     #   pip-tools
 pytest==6.2.5
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest-cov
     #   pytest-mock
-pytest-cov==4.1.0
+pytest-cov==6.1.1
     # via -r requirements-dev.in
-pytest-mock==3.12.0
+pytest-mock==3.14.0
     # via -r requirements-dev.in
-readme-renderer==42.0
+readme-renderer==44.0
     # via twine
-requests==2.31.0
+requests==2.32.3
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests-toolbelt
     #   sphinx
     #   twine
@@ -181,56 +191,62 @@ requests-toolbelt==1.0.0
     # via twine
 rfc3986==2.0.0
     # via twine
-rich==13.7.0
+rich==14.0.0
     # via twine
+roman-numerals-py==3.1.0
+    # via sphinx
 secretstorage==3.3.3
     # via keyring
 snowballstemmer==2.2.0
     # via sphinx
-sphinx==7.2.6
+sphinx==8.2.3
     # via
     #   -r requirements-dev.in
     #   sphinx-rtd-theme
     #   sphinxcontrib-jquery
-sphinx-rtd-theme==2.0.0
+sphinx-rtd-theme==3.0.2
     # via -r requirements-dev.in
-sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-applehelp==2.0.0
     # via sphinx
-sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-devhelp==2.0.0
     # via sphinx
-sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-htmlhelp==2.1.0
     # via sphinx
 sphinxcontrib-jquery==4.1
     # via sphinx-rtd-theme
 sphinxcontrib-jsmath==1.0.1
     # via sphinx
-sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-qthelp==2.0.0
     # via sphinx
-sphinxcontrib-serializinghtml==1.1.10
+sphinxcontrib-serializinghtml==2.0.0
     # via sphinx
 toml==0.10.2
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
-tox==4.13.0
+tox==4.15.1
     # via -r requirements-dev.in
-twine==5.0.0
+twine==6.0.1
     # via -r requirements-dev.in
-urllib3==2.2.1
+typing-extensions==4.13.2
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
+    #   eth-retry
+urllib3==2.4.0
+    # via
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests
     #   twine
-virtualenv==20.26.6
+virtualenv==20.30.0
     # via tox
-wheel==0.42.0
+wheel==0.45.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   -r requirements-dev.in
     #   pip-tools
-zipp==3.17.0
+zipp==3.21.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
