--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ deps =
     docs-{local,external}: sphinx_rtd_theme
     docs-{local,external}: pygments_lexer_solidity
 commands =
-    py{310,311,312}: python -m pytest tests/ {posargs} -vv
+    py{310,311,312}: python -m pytest tests/ {posargs} -s -vv
     evm-byzantium: python -m pytest tests/ --evm 0.4.22,0.4.26,0.5.0,0.5.17,0.6.3,0.6.9 byzantium 0,10000 -v
     evm-petersburg: python -m pytest tests/ --evm 0.5.5,0.5.17,0.6.3,0.6.9 petersburg 0,10000 -v
     evm-istanbul: python -m pytest tests/ --evm 0.5.13,0.5.17,0.6.3,0.6.9 istanbul 0,10000 -v
