--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.11.18
+aiohttp==3.12.0
     # via web3
 aiosignal==1.3.2
     # via aiohttp
@@ -73,7 +73,7 @@ eth-keys==0.7.0
     #   eth-keyfile
 eth-rlp==2.2.0
     # via eth-account
-eth-typing==4.4.0
+eth-typing==5.2.1
     # via
     #   -r requirements.in
     #   cchecksum
@@ -82,7 +82,7 @@ eth-typing==4.4.0
     #   eth-keys
     #   eth-utils
     #   web3
-eth-utils==4.1.1
+eth-utils==5.3.0
     # via
     #   -r requirements.in
     #   cchecksum
@@ -173,7 +173,9 @@ pycryptodome==3.23.0
     #   eth-keyfile
     #   vyper
 pydantic==2.11.5
-    # via eth-account
+    # via
+    #   eth-account
+    #   eth-utils
 pydantic-core==2.33.2
     # via pydantic
 pygments==2.19.1
