--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,10 @@
 [build-system]
-requires = ["setuptools", "wheel", "mypy[mypyc]>=1.14.1,<1.15.1"]
+requires = [
+    "setuptools", 
+    "wheel", 
+    "mypy[mypyc]>=1.14.1,<1.15.1",
+    "types-requests",
+]
 
 
 # Brownie configuration for Black.
