--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = [
     "setuptools", 
     "wheel", 
-    "mypy[mypyc]>=1.14.1,<1.15.1",
+    "mypy[mypyc]==1.16.0",
     "types-pyyaml",
     "types-requests",
 ]
