--- a/.github/workflows/repo-chores.yaml
+++ b/.github/workflows/repo-chores.yaml
@@ -31,7 +31,7 @@ jobs:
         key: mypy-cache-${{ runner.os }}-${{ hashFiles('**/*.py', 'pyproject.toml') }}
 
     - name: Install Pip Tools
-      run: 
+      run: |
         pip install -U pip
         pip install -U pip-tools
       
