--- a/.github/workflows/repo-chores.yaml
+++ b/.github/workflows/repo-chores.yaml
@@ -45,6 +45,9 @@ jobs:
     - name: Run Pip Compile for Dev Deps
       run: pip-compile -U requirements-dev.in --no-strip-extras
 
+    - name: Run Pip Compile for Docs Deps
+      run: pip-compile -U requirements-docs.in --no-strip-extras
+
     - name: Delete existing build files
       run: rm -rf build
       
