--- a/.github/workflows/repo-chores.yaml
+++ b/.github/workflows/repo-chores.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches:
       - master
-      
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -50,38 +50,23 @@ jobs:
 
     - name: Delete existing build files
       run: rm -rf build
-      
-    - name: Compile
-      run: pip install .
-        
-    - name: Normalize C files for diffchecking
-      # This makes it much easier to diffcheck changes in the C files
-      run: |
-        # Insert DIFFCHECK_PLACEHOLDER macro at the top if not present
-        for f in build/*.c; do
-          if ! grep -q 'DIFFCHECK_PLACEHOLDER' "$f"; then
-            sed -i '1i#ifndef DIFFCHECK_PLACEHOLDER\n#define DIFFCHECK_PLACEHOLDER 0\n#endif' "$f"
-          fi
-        done
-        # Replace line number in CPy_AddTraceback with macro
-        sed -i 's/\(CPy_AddTraceback([^,]*, *[^,]*, *\)[0-9]\+\(, *[^)]*)\)/\1DIFFCHECK_PLACEHOLDER\2/g' build/*.c
-        # Replace index in CPyStatics[...] with macro
-        sed -i 's/CPyStatics\[[0-9]\+\]/CPyStatics[DIFFCHECK_PLACEHOLDER]/g' build/*.c
-    
-    - name: Check for changes
-      id: changes
-      run: |
-        if [[ -n $(git status --porcelain) ]]; then
-          echo "changes_detected=true" >> $GITHUB_ENV
-        else
-          echo "changes_detected=false" >> $GITHUB_ENV
-        fi
-    
-    - name: Commit changes
-      if: env.changes_detected == 'true'
-      run: |
-        git config --local user.name "github-actions[bot]"
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add .
-        git commit -m "chore: \`pip-compile\` and compile C files for source control"
-        git push
+
+    - name: Build and normalize wheel with mypycify
+      uses: BobTheBuidler/mypycify@v0.0.1
+      with:
+        python-version: '3.13'
+        hash-key: |
+          brownie/**/*.py
+          pyproject.toml
+          setup.py
+          requirements.txt
+        ccache: true
+        pip-cache-dependency-path: |
+          pyproject.toml
+          setup.py
+          requirements.txt
+          requirements-dev.txt
+          requirements-windows.txt
+        push-source: true
+        commit-message: "chore: `pip-compile` and compile C files for source control"
+        normalize-source: true
