--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ requires = [
     "faster-eth-abi==5.2.12; platform_system != 'Linux' or python_version != '3.14' or platform_machine != 'i686'",
     "faster-eth-utils==5.3.16; platform_system != 'Linux' or python_version != '3.14' or platform_machine != 'i686'",
     "faster-hexbytes==1.3.3",
+    "hypothesis==6.27.3",
     "prompt-toolkit==3.0.52",
 	"py-solc-ast==1.2.10",
 	"py-solc-x==1.1.1",
