--- a/.github/workflows/pip-compile.yaml
+++ b/.github/workflows/pip-compile.yaml
@@ -1,4 +1,4 @@
-name: format files, update deps and C source
+name: Pip Compile
 
 on:
   pull_request:
@@ -10,7 +10,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  repo-chores:
+  pip-compile:
     runs-on: ubuntu-latest
 
     steps:
@@ -48,40 +48,11 @@ jobs:
     - name: Run Pip Compile for Docs Deps
       run: pip-compile -U requirements-docs.in --no-strip-extras
 
-    - name: Delete existing build files
-      run: rm -rf build
-      
-    - name: Compile
-      run: pip install .
-        
-    - name: Normalize C files for diffchecking
-      # This makes it much easier to diffcheck changes in the C files
-      run: |
-        # Insert DIFFCHECK_PLACEHOLDER macro at the top if not present
-        for f in build/*.c; do
-          if ! grep -q 'DIFFCHECK_PLACEHOLDER' "$f"; then
-            sed -i '1i#ifndef DIFFCHECK_PLACEHOLDER\n#define DIFFCHECK_PLACEHOLDER 0\n#endif' "$f"
-          fi
-        done
-        # Replace line number in CPy_AddTraceback with macro
-        sed -i 's/\(CPy_AddTraceback([^,]*, *[^,]*, *\)[0-9]\+\(, *[^)]*)\)/\1DIFFCHECK_PLACEHOLDER\2/g' build/*.c
-        # Replace index in CPyStatics[...] with macro
-        sed -i 's/CPyStatics\[[0-9]\+\]/CPyStatics[DIFFCHECK_PLACEHOLDER]/g' build/*.c
-    
-    - name: Check for changes
-      id: changes
-      run: |
-        if [[ -n $(git status --porcelain) ]]; then
-          echo "changes_detected=true" >> $GITHUB_ENV
-        else
-          echo "changes_detected=false" >> $GITHUB_ENV
-        fi
-    
     - name: Commit changes
       if: env.changes_detected == 'true'
       run: |
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git add .
-        git commit -m "chore: \`pip-compile\` and compile C files for source control"
+        git commit -m "chore: \`pip-compile\`"
         git push
