--- a/requirements.in
+++ b/requirements.in
@@ -4,8 +4,8 @@ eth-account
 eth-event>=1.4.3,<2
 eth-hash[pycryptodome]
 eth-typing>=4.2.1,<6
-faster-eth-abi
-faster-eth-utils>=4.1.2
+faster-eth-abi>=5.2.12
+faster-eth-utils>=5.3.11
 faster-hexbytes>=1.3.2,<2
 hypothesis<6.28.0
 lazy-object-proxy>=1.6.0,<2
