--- a/.github/workflows/pip-compile.yaml
+++ b/.github/workflows/pip-compile.yaml
@@ -47,6 +47,15 @@ jobs:
 
     - name: Run Pip Compile for Docs Deps
       run: pip-compile -U requirements-docs.in --no-strip-extras
+    
+    - name: Check for changes
+      id: changes
+      run: |
+        if [[ -n $(git status --porcelain) ]]; then
+          echo "changes_detected=true" >> $GITHUB_ENV
+        else
+          echo "changes_detected=false" >> $GITHUB_ENV
+        fi
 
     - name: Commit changes
       if: env.changes_detected == 'true'
