--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -107,3 +107,42 @@ jobs:
         title: ${{ env.COMMIT_MSG }}
         body: ${{ env.PR_BODY }}
         commit-message: ${{ env.COMMIT_MSG }}
+  
+  autoflake:
+    runs-on: ubuntu-latest
+    needs: black
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v6
+      with:
+        ref: ${{ github.head_ref }}  # Check out the PR branch
+
+    - name: Set up Python
+      uses: actions/setup-python@v6
+      with:
+        python-version: '3.12'
+
+    - name: Install Autoflake
+      run: pip install autoflake
+
+    - name: Run Autoflake
+      run: autoflake --remove-all-unused-imports --in-place --expand-star-imports --ignore-init-module-imports -r .
+
+    - name: Check for changes
+      id: changes
+      run: |
+        if [[ -n $(git status --porcelain) ]]; then
+          echo "changes_detected=true" >> $GITHUB_ENV
+        else
+          echo "changes_detected=false" >> $GITHUB_ENV
+        fi
+
+    - name: Commit changes
+      if: env.changes_detected == 'true'
+      run: |
+        git config --local user.name "github-actions[bot]"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git add .
+        git commit -m "chore: autoflake"
+        git push
