--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,4 +1,4 @@
-name: Lint
+name: Lint All The Things
 
 on:
   push:
@@ -19,130 +19,15 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  pyupgrade:
+  lint-all-the-things:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v6
-      with:
-        ref: ${{ github.head_ref }}  # Check out the PR branch
-
-    - name: Set up Python
-      uses: actions/setup-python@v6
-      with:
-        python-version: '3.12'
-
-    - name: Install PyUpgrade
-      run: pip install pyupgrade
-
-    - name: Run PyUpgrade
-      run: find . -name '*.py' -exec pyupgrade --py310-plus --exit-zero-even-if-changed {} +
-
-    - name: Check for changes
-      id: changes
-      run: |
-        if [[ -n $(git status --porcelain) ]]; then
-          echo "changes_detected=true" >> $GITHUB_ENV
-        else
-          echo "changes_detected=false" >> $GITHUB_ENV
-        fi
-
-    - name: Commit changes
-      if: env.changes_detected == 'true'
-      run: |
-        git config --local user.name "github-actions[bot]"
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add .
-        git commit -m "chore: run \`pyupgrade\` for Python3.10"
-        git push
-      
-  black:
-    runs-on: ubuntu-latest
-    needs: pyupgrade
-    env:
-      PUSH_TO: master
-      COMMIT_MSG: "chore: run black formatter `black .`"
-      PR_BODY: "This PR was created automatically by GitHub Actions in response to recent changes on master branch."
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.13'
-      
-    - name: Install Black
-      run: pip install black
-
-    - name: Run black .
-      run: black .
-
-    - name: Check for Black changes
-      id: black_diff
-      run: |
-        if ! git diff --quiet; then
-          echo "changed=true" >> $GITHUB_OUTPUT
-        else
-          echo "changed=false" >> $GITHUB_OUTPUT
-        fi
-
-    - name: Try push changes directly to base branch if not a fork
-      if: steps.black_diff.outputs.changed == 'true' && github.event.repository.fork == false
-      id: try_push
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add .
-        git commit -m "${{ env.COMMIT_MSG }}" || exit 0
-        git push origin HEAD:${{ env.PUSH_TO }} || echo "push_failed=true" >> $GITHUB_OUTPUT
-
-    - name: Create Pull Request
-      if: steps.black_diff.outputs.changed == 'true' && (github.event.repository.fork == true || steps.try_push.outputs.push_failed == 'true')
-      uses: peter-evans/create-pull-request@v5
-      with:
-        branch: black-formatter-auto
-        base: ${{ env.PUSH_TO }}
-        title: ${{ env.COMMIT_MSG }}
-        body: ${{ env.PR_BODY }}
-        commit-message: ${{ env.COMMIT_MSG }}
-  
-  autoflake:
-    runs-on: ubuntu-latest
-    needs: black
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v6
-      with:
-        ref: ${{ github.head_ref }}  # Check out the PR branch
-
-    - name: Set up Python
-      uses: actions/setup-python@v6
-      with:
-        python-version: '3.12'
-
-    - name: Install Autoflake
-      run: pip install autoflake
-
-    - name: Run Autoflake
-      run: autoflake --remove-all-unused-imports --in-place --expand-star-imports --ignore-init-module-imports -r .
-
-    - name: Check for changes
-      id: changes
-      run: |
-        if [[ -n $(git status --porcelain) ]]; then
-          echo "changes_detected=true" >> $GITHUB_ENV
-        else
-          echo "changes_detected=false" >> $GITHUB_ENV
-        fi
-
-    - name: Commit changes
-      if: env.changes_detected == 'true'
-      run: |
-        git config --local user.name "github-actions[bot]"
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add .
-        git commit -m "chore: autoflake"
-        git push
+      - name: Checkout code
+        uses: actions/checkout@v6
+        with:
+          ref: ${{ github.head_ref }}
+      - name: Lint All The Things
+        uses: BobTheBuidler/lint-all-the-things@v0.0.3
+        with:
+          python-version: 3.14
+          pyupgrade-target-version: py310
