--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = [
     "setuptools", 
     "wheel", 
     # Need packaging >=25 so bdist_wheel understands cp14xt (nogil) ABI tags
-    "packaging>=25.0; python_version != '3.14'",
+    "packaging>=25.0; python_version = '3.14'",
     "mypy[mypyc]==1.18.2",
     "types-pyyaml",
     "types-requests",
