--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,7 @@ attrs==25.4.0
     # via
     #   -c requirements.txt
     #   pytest
-black==26.1a1
+black==26.1.0
     # via -r requirements-dev.in
 build==1.3.0
     # via pip-tools
@@ -16,7 +16,7 @@ bump2version==1.0.1
     # via bumpversion
 bumpversion==0.6.0
     # via -r requirements-dev.in
-cachetools==6.2.4
+cachetools==7.0.1
     # via tox
 certifi==2026.1.4
     # via
@@ -36,7 +36,7 @@ click==8.3.1
     #   pip-tools
 colorama==0.4.6
     # via tox
-coverage[toml]==7.13.1
+coverage[toml]==7.13.4
     # via
     #   -r requirements-dev.in
     #   pytest-cov
@@ -46,9 +46,9 @@ distlib==0.4.0
     # via virtualenv
 docutils==0.22.4
     # via readme-renderer
-eth-retry==0.3.5
+eth-retry==0.3.7
     # via -r requirements-dev.in
-filelock==3.20.2
+filelock==3.24.1
     # via
     #   tox
     #   virtualenv
@@ -66,7 +66,7 @@ isort==7.0.0
     # via -r requirements-dev.in
 jaraco-classes==3.4.0
     # via keyring
-jaraco-context==6.0.2
+jaraco-context==6.1.0
     # via keyring
 jaraco-functools==4.4.0
     # via keyring
@@ -90,7 +90,7 @@ mypy-extensions==1.1.0
     # via
     #   -c requirements.txt
     #   black
-nh3==0.3.2
+nh3==0.3.3
     # via readme-renderer
 packaging==23.2
     # via
@@ -101,13 +101,13 @@ packaging==23.2
     #   pytest
     #   tox
     #   twine
-pathspec==0.12.1
+pathspec==1.0.4
     # via black
-pip-tools==7.5.2
+pip-tools==7.5.3
     # via -r requirements-dev.in
 pkginfo==1.12.1.2
     # via twine
-platformdirs==4.5.1
+platformdirs==4.9.1
     # via
     #   black
     #   tox
@@ -124,7 +124,7 @@ py==1.11.0
     #   pytest
 pycodestyle==2.14.0
     # via flake8
-pycparser==2.23
+pycparser==3.0
     # via cffi
 pyflakes==3.4.0
     # via flake8
@@ -153,7 +153,7 @@ pytest-cov==6.3.0
     # via -r requirements-dev.in
 pytest-mock==3.15.1
     # via -r requirements-dev.in
-pytokens==0.3.0
+pytokens==0.4.1
     # via black
 readme-renderer==44.0
     # via twine
@@ -166,7 +166,7 @@ requests-toolbelt==1.0.0
     # via twine
 rfc3986==2.0.0
     # via twine
-rich==14.2.0
+rich==14.3.2
     # via twine
 secretstorage==3.5.0
     # via keyring
@@ -182,7 +182,7 @@ typing-extensions==4.15.0
     # via
     #   -c requirements.txt
     #   eth-retry
-urllib3==2.6.2
+urllib3==2.6.3
     # via
     #   -c requirements.txt
     #   requests
